<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCD0D1"
    android:orientation="vertical"
    android:padding="12dip" >
    
<!-- 三个区域：layout_weight 3 2 3实现比例1:2:1，刚刚好 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/screen_bg"
        android:gravity="right"
        android:orientation="vertical"
      	android:layout_weight="3" 
        android:padding="12dip" >
		<!-- android:layout_height="120dip"  同时无android:weight-->
        
		<!-- 上面的屏幕 -->
        <TextView    
            android:id="@+id/show_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#F00DEE"
            android:textSize="26sp" />
        
		<!-- 下面的输入屏幕 -->
        <TextView	
            android:id="@+id/show_input_tv"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:textColor="#1B1D20"
            android:textSize="30sp" />
    </LinearLayout>
    
	<LinearLayout 
	    	 android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginTop="10dip"
	    >

<!-- IF --> 
  <LinearLayout
        style="@style/Col2Style"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/up_btn"
            style="@style/Button5Style"
            android:text="UP_S" />

        <Button
            android:id="@+id/down_btn"
            style="@style/Button5Style"
            android:text="DOWN" />
          
        <Button
            android:id="@+id/copy_about"
            style="@style/Button5Style"
            android:text="Me" />
        
		<!-- s逆转换按钮，用来得到对应频点号 -->
        <Button
            android:id="@+id/inv_btn"
            style="@style/Button5Style"
            android:text="INV" />
    </LinearLayout>
<!-- END -->
	    
	    
    <LinearLayout
        style="@style/Col2Style"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/c_btn"
            style="@style/Button5Style"
            android:textColor="#EF7524"
            android:text="C" />

        <Button
            android:id="@+id/del_btn"
            style="@style/Button5Style"
            android:text="DEL" />
       
    
        

        <Button
            android:id="@+id/divide_btn"
            style="@style/Button5Style"
            android:text="@string/divide" />

        <Button
            android:id="@+id/multiply_btn"
            style="@style/Button5Style"
            android:text="@string/multply" />
    </LinearLayout>
    

    <LinearLayout
         style="@style/Col2Style"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/seven_btn"
            style="@style/Button3Style"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight_btn"
            style="@style/Button3Style"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine_btn"
            style="@style/Button3Style"
            android:text="@string/nine" />

        <Button
            android:id="@+id/sub_btn"
            style="@style/Button5Style"
            android:text="@string/sub" />
    </LinearLayout>

    <LinearLayout
        style="@style/Col2Style"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/four_btn"
            style="@style/Button3Style"
            android:text="@string/four" />

        <Button
            android:id="@+id/five_btn"
            style="@style/Button3Style"
            android:text="@string/five" />

        <Button
            android:id="@+id/six_btn"
            style="@style/Button3Style"
            android:text="@string/six" />

        <Button
            android:id="@+id/add_btn"
            style="@style/Button5Style"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/one_btn"
                        style="@style/Button3Style"
                        android:text="@string/one" />

                    <Button
                        android:id="@+id/two_btn"
                        style="@style/Button3Style"
                        android:text="@string/two" />

                    <Button
                        android:id="@+id/three_btn"
                        style="@style/Button3Style"
                        android:text="@string/three" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/zero_btn"
                        style="@style/Button3Style"
                        android:text="@string/zero" />

                    <Button
                        android:id="@+id/point_btn"
                        style="@style/Button3Style"
                        android:layout_weight="2"
                        android:text="@string/point" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/equal_btn"
                style="@style/Button4Style"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>